tests/valid/expressions/parenthesized.nyx
// Parenthesized expressions (precedence override)
func paren_ops(a: i32, b: i32, c: i32) -> ok
    let a = (1 + 2) * 3
    let b = (a + b) * (a - b)
    let c = ((a + b) * c) - 1
    pass
