tests/invalid/syntax/break_outside_loop.nyx
// Invalid: Break outside of loop
func invalid_break() -> ok
    let x = 5
    if x > 3
        break
    pass
